[OPENAPI] Start correcting application openAPI
