# template-laravel/routes/web.php
@@ -52,14 +52,14 @@ Route::post('questions/{id}/edit'     , 'InterventionController@updateQuestion')
 
 // Interventions - Answers
 Route::get('/answers'                     , function () { return redirect()->back(); });
-Route::get('/answers/{id}'                , function () { return redirect()->back(); });
+Route::get('/answers/{id}'                , function ($id) { return redirect('/questions'.'/'.$id); });
 Route::post('questions/{id}/answers/create', 'InterventionController@createAnswer')->name('answers.create');
 Route::get('answers/{id}/edit'            , 'InterventionController@showEditAnswerForm');
 Route::post('answers/{id}/edit'           , 'InterventionController@updateAnswer')->name('answers.edit');
 
 // Interventions - Comments
 Route::get('/comments'                    , function () { return redirect()->back(); });
-Route::get('/comments/{id}'               , function () { return redirect()->back(); });
+Route::get('/comments/{id}'               , function ($id) { return redirect('/questions'.'/'.$id); });
 Route::post('answers/{id}/comments/create', 'InterventionController@createComment')->name('comments.create');
 Route::get('comments/{id}/edit'           , 'InterventionController@showEditCommentForm');
 Route::post('comments/{id}/edit'          , 'InterventionController@updateComment')->name('comments.edit');
